@@ -145,6 +145,19 @@ int EVP_DigestInit(EVP_MD_CTX *ctx, const EVP_MD *type)
 int EVP_DigestInit_ex(EVP_MD_CTX *ctx, const EVP_MD *type, ENGINE *impl)
 	{
 	EVP_MD_CTX_clear_flags(ctx,EVP_MD_CTX_FLAG_CLEANED);
+#ifdef OPENSSL_FIPS_
+	/* If FIPS mode switch to approved implementation if possible */
+	if (FIPS_mode())
+		{
+		const EVP_MD *fipsmd;
+		if (type)
+			{
+			fipsmd = FIPS_get_digestbynid(EVP_MD_type(type));
+			if (fipsmd)
+				type = fipsmd;
+			}
+		}
+#endif
 #ifndef OPENSSL_NO_ENGINE
 	/* Whether it's nice or not, "Inits" can be used on "Final"'d contexts
 	 * so this context may already have an ENGINE! Try to avoid releasing
