@@ -66,7 +66,6 @@
 #endif
 
 #ifndef OPENSSL_NO_SHA
-#ifndef OPENSSL_FIPS
 
 static int init(EVP_MD_CTX *ctx)
 	{ return SHA1_Init(ctx->md_data); }
@@ -97,5 +96,4 @@ const EVP_MD *EVP_dss(void)
 	{
 	return(&dsa_md);
 	}
-#endif
 #endif
