@@ -68,8 +68,6 @@
 #include <openssl/dsa.h>
 #endif
 
-#ifndef OPENSSL_FIPS 
-
 static int init(EVP_MD_CTX *ctx)
 	{ return SHA1_Init(ctx->md_data); }
 
@@ -99,5 +97,4 @@ const EVP_MD *EVP_dss1(void)
 	{
 	return(&dss1_md);
 	}
-#endif
 #endif
